* CHANGES IN dplR VERSION 1.6.0

File: NAMESPACE
-------------------------
- Added chron.plot to export list.
- Added rho.series to export list.
- Added rwl.plot as an S3Method.

File: series.rho.R
-------------------------
- New function series.rho. This needs more work.
  E.g., speed up via apply()? And need to integrate
  into rwl.stats WITHOUT any new arguments being
  added to rwl.stats. I like that function clean.

File: read.compact.R
-------------------------
- Added class "rwl" to output object.

File: read.fh.R
-------------------------
- Added class "rwl" to output object.

File: read.tridas.R
-------------------------
- Added class "rwl" to output object $results.

File: read.tucson.R
-------------------------
- Added class "rwl" to output object.

File: anos1.rda
-------------------------
- Added class "rwl" to object.

File: ca533.rda
-------------------------
- Added class "rwl" to object.

File: co021.rda
-------------------------
- Added class "rwl" to object.

File: gp.rwl.rda
-------------------------
- Added class "rwl" to object.


File: rwl.plot.R
-------------------------
- New wrapper to plot rwl objects. This is setting the
  stage for having plot, summary, etc. methods for rwl
  objects. There are still several things to work on. Like
  setting the class() of rwl data objects via read.rwl (and in 
  the onboard data sets). And will this class change break any 
  existing functions?

File: spag.plot.R
-------------------------
- Cosmetic changes to plot.

File: seg.plot.R
-------------------------
- Cosmetic changes to plot.

File: crn.plot.R
-------------------------
- Added several new plotting options to give users more control of plot
- Aliased crn.plot to chron.plot to be consistent with the chron() function.
  It was confusing to use bar <- chon(foo) but not be able to use
  chron.plot(bar). It would be nice to make chron an S3method to thus be
  able to just do plot(bar) I suppose.
- Help revised considerably
