@@ -4,7 +4,13 @@ File: NAMESPACE
 -------------------------
 - Added chron.plot to export list.
 - Added rho.series to export list.
-- Added rwl.plot as an S3Method.
+- Added plot.rwl as an S3Method.
+
+File: corr.rwl.seg.R
+--------------------
+
+- Removed yr.range() function in favor of yr.range() in helpers.R.
+  They are identical for all practical purposes.
 
 File: series.rho.R
 -------------------------
